force-app/main/default/objects/Training__c/fields/Training_Id__c.field-meta.xml
<CustomField>
    <fullName>Training_Id__c</fullName>
    <displayFormat>TRN-{000}</displayFormat>
    <label>Training Id</label>
    <type>AutoNumber</type>
</CustomField>